# C-calc

./: .gitignore  CMakeLists.txt  README.md  build.bat  main.c
biblioteca/: biblioteca.c
calc/: .clangd  main.c
includes/: debug.c  debug.h  interpretador.c  interpretador.h  matematica.c  matematica.h  utils.c  utils.h
